WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
312506
Fix non-unified builds 2026-04-16
https://bugs.webkit.org/show_bug.cgi?id=312506
Summary
Fix non-unified builds 2026-04-16
Jani Hautakangas
Reported
2026-04-16 13:44:15 PDT
Build fails with following cmake options: -DPORT=WPE -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++ -DENABLE_UNIFIED_BUILDS=OFF
Attachments
Add attachment
proposed patch, testcase, etc.
Jani Hautakangas
Comment 1
2026-04-16 13:52:01 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62919
Fujii Hironori
Comment 2
2026-04-16 18:04:19 PDT
"04-16-2026" makes me feel weird. I hope you'd like ISO 8601 format 2026-04-16.
https://en.wikipedia.org/wiki/ISO_8601
Jani Hautakangas
Comment 3
2026-04-16 20:53:29 PDT
Thanks, fixed
EWS
Comment 4
2026-04-17 03:28:32 PDT
Committed
311440@main
(892008ea2763): <
https://commits.webkit.org/311440@main
> Reviewed commits have been landed. Closing PR #62919 and removing active labels.
Radar WebKit Bug Importer
Comment 5
2026-04-17 03:29:14 PDT
<
rdar://problem/174997373
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug