Fix non-unified builds https://bugs.webkit.org/show_bug.cgi?id=312506

Reviewed by Claudio Saavedra.

Fix non-unified builds 04-16-2026

* Source/JavaScriptCore/runtime/ModuleGraphLoadingState.cpp:
* Source/JavaScriptCore/runtime/ModuleLoaderPayload.cpp:
* Source/WebCore/bindings/js/ScriptModuleLoader.h:
* Source/WebCore/html/LazyLoadVideoObserver.h:
* Source/WebCore/inspector/agents/frame/FrameWorkerAgent.cpp:
* Source/WebCore/page/IntersectionObserver.cpp:
* Source/WebCore/rendering/RenderTextFragment.cpp:
* Source/WebCore/style/StyleSheetContentsCache.h:
* Source/WebCore/style/values/images/kinds/StyleImageSet.cpp:
* Source/WebCore/workers/service/server/SWServer.cpp:

Canonical link: https://commits.webkit.org/311440@main